<resources>
    <string name="app_name">Z.A music</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="world_of_music">WORLD OF MUSIC</string>
    <string name="back">BACK</string>
    <string name="favorite">FAVORITES</string>
    <string name="start">00:00</string>
    <string name="end">LOADING…</string>
    <string name="timer">TIMER</string>
    <string name="share">SHARE</string>
    <string name="repeat">REPEAT</string>
    <string name="create_playlist">CREATE PLAYLIST</string>
    <string name="equalizer">EQUALIZER</string>
    <string name="playlist">PLAYLIST</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_name">SONG NAME</string>
    <string name="song_album">SONG ALBUM</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">SEARCH VIEW</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_name">PLAYLIST NAME</string>
    <string name="playlist_image">PLAYLIST IMAGE</string>
    <string name="playlist_delete">PLAYLIST DELETE</string>
    <string name="user_name">YOUR NAME</string>
    <string name="add_music">ADD</string>
    <string name="remove_all_musics_in_playlist">DELETE ALL</string>
    <string name="search_song">SEARCH SONG</string>
    <string name="feedback_topic">Topic i.e Suggestion, Error, etc.</string>
    <string name="feedback_email">Email Address (Optional)</string>
    <string name="send_feedback">SEND</string>
    <string name="sort">Sort By</string>
    <string name="version">VERSION</string>
    <string name="play_next">Play Next</string>
    <string name="song_image">SONG IMAGE</string>
    <string name="play_next_note">Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_note">Click On ➕ To Create New Playlist. </string>
    <string name="next_music">Next Music</string>
    <string name="previous_music">Previous Music</string>
    <string name="play_pause">Play Pause</string>
    <string name="play">Play</string>
    <string name="delete_music">Delete Music</string>
    <string name="more">More Items</string>
    <string name="set_as_ringtone">Set As Ringtone</string>
    <string name="set_as_alarm_ringtone">Set As Alarm Ringtone</string>
    <string name="add_to_play_list">Add to Playlist</string>
    <string name="add_to_play_next">Add to Play Next</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="album_name">ALBUM NAME</string>
    <string name="album_image">ALBUM IMAGE</string>
    <string name="show_by_album">SHOW BY ALBUM</string>
    <string name="show_by_artist">SHOW BY ARTIST</string>
    <string name="show_by_song">SHOW BY SONG</string>
    <string name="show_by">SHOW BY</string>
    <string name="seek_for_lyrics">SEEK FOR LYRICS</string>
    <string name="save_lyrics">SAVE LYRICS</string>
    <string name="artist_img">ARTIST IMAGE</string>
    <string name="artist_name">ARTIST NAME</string>
    <string name="music_adapter_class">class com.example.musicplayer.Adaptor.MusicAdapter</string>
    <string name="album_adapter_class">class com.example.musicplayer.Adaptor.AlbumViewAdapter</string>
    <string name="artist_adapter_class">class com.example.musicplayer.Adaptor.ArtistViewAdapter</string>
    <string name="song">SONG</string>
    <string name="album">ALBUM</string>
    <string name="artist">ARTIST</string>
</resources>