<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Feedback">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/topicFD"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center|start"
        android:hint="@string/feedback_topic"
        android:inputType="text"
        android:padding="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFD"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center|start"
        android:hint="@string/feedback_email"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feedbackFD"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:hint="@string/feedback"
        android:inputType="text"
        android:padding="15dp" />

    <Button
        android:id="@+id/sendFD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/send_feedback" />

</LinearLayout>