<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgMV"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:src="@mipmap/music_player_icon"
        app:shapeAppearanceOverlay="@style/curved" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/songDuration"
        android:layout_toEndOf="@id/imgMV"
        android:orientation="vertical">

        <TextView
            android:id="@+id/songName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/song_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/songAlbum"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/song_album" />

        <TextView
            android:id="@+id/songGenre"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/song_genre" />
    </LinearLayout>

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:text="@string/start" />

</RelativeLayout>